--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@
 .container {
   background-color: white;
   width: 330px;
-  border: 1px solid #c4c4c4;
+  border: 1px solid #FFCF40;
   box-sizing: border-box;
   border-radius: 10px;
   margin: auto;
@@ -126,13 +126,12 @@
 
 .buttonDiv {
   margin: auto;
-  width: 40%;
-  display: flex;
+  width: 18%;
+  display:flex;
   /* justify-content: space-between; */
-  align-items: center;
   margin-top: 18px;
   border: 20px;
-  background-color: #833AE0;
+  background-color: #f0c74b;
   /* padding: 20px; */
   border-radius: 50px;
   transition: all 0.7s;
@@ -141,22 +140,14 @@
 }
 
 .buttonDiv:hover {
-  width: 60%;
+  background-color:#787878 ;
 }
 
-.buttonPlus {
-  background-color: #9953F1;
-  padding: 12px;
-  padding-left: 18px;
-  padding-right: 18px;
-  border-radius: 80px;
-  width: 5%;
-  color: white;
-}
 
 .buttonAdd {
-  color: white;
-  font-family: roboto;
+  text-align: center;
+  color: black;
   font-family: "Roboto", sans-serif;
-  margin: auto;
+  padding: 12px;
+  border-radius: 80px;
 }
